# software-factory-platform

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml  source-env.sh
.claude/: settings.json
.claude/agents/: sfp-coder.md  sfp-planner.md  sfp-reviewer.md  sfp-test-designer.md  sfp-validator.md
.claude/skills/create-sfp-ticket/: SKILL.md
.claude/skills/open-sfp-pr/: SKILL.md
.github/workflows/: ci.yml
.github/workflows/reusable/: ci.yml  release.yml
docs/: 00_PROJECT_BOOTSTRAP.md  BUILD_ORDER.md  IMPLEMENTATION_DECISIONS.md  IMPLEMENTATION_NOTES.md  MASTER_SPECIFICATION_V0.md  SFP_Ticket_Hierarchy.md  build_order.json
infrastructure/local/: compose.yaml
infrastructure/local/postgres/: init.sh
services/communication/: README.md  alembic.ini  pyproject.toml
services/communication/alembic/: env.py
services/communication/alembic/versions/: 0001_create_user_interaction.py
services/communication/src/communication/infrastructure/persistence/: __init__.py  base.py  user_interaction.py
services/communication/tests/: test_user_interaction.py
services/external-events/: README.md  alembic.ini  pyproject.toml
services/external-events/src/external_events/infrastructure/persistence/: __init__.py  base.py  models.py
services/external-events/src/external_events/infrastructure/persistence/alembic/: env.py
services/external-events/src/external_events/infrastructure/persistence/alembic/versions/: 0001_create_endpoint_config.py
services/external-events/tests/: test_endpoint_config.py
services/identity/: README.md  alembic.ini  pyproject.toml
services/identity/src/identity/infrastructure/persistence/: __init__.py  base.py
services/identity/src/identity/infrastructure/persistence/migrations/: env.py
services/identity/src/identity/infrastructure/persistence/migrations/versions/: 0001_create_identity_baseline.py
services/identity/src/identity/infrastructure/persistence/models/: __init__.py  user.py  user_external_identity.py
services/identity/tests/: test_identity_metadata.py  test_migration_0001_baseline.py  test_user.py  test_user_external_identity.py
services/orchestrator/: README.md  pyproject.toml
services/workspace-worker/: README.md  pyproject.toml
services/workspace-worker/src/workspace_worker/exec/: __init__.py  build.py  lint.py  tests.py
services/workspace-worker/src/workspace_worker/repo/: __init__.py  branch.py  manager.py  worktree.py
services/workspace-worker/src/workspace_worker/repo/git/: __init__.py  adapter.py
services/workspace-worker/src/workspace_worker/workflow/: __init__.py  failure.py  readiness_rubric.py
services/workspace-worker/tests/: test_exec_build.py  test_exec_lint.py  test_exec_tests.py  test_git_adapter.py  test_readiness_rubric.py  test_repo_branch.py  test_repo_manager.py  test_repo_worktree.py  test_workflow_failure.py
tests/: test_build_order.py  test_check_prspec.py  test_create_jira_tickets_links.py  test_create_sfp_ticket.py  test_imports.py  test_jira_status.py  test_reconcile_dep_links.py
tools/: build_order.py  check_prspec.py  create_jira_tickets.py  create_sfp_ticket.py  jira_status.py  prspec_example.json  prspec_invalid.json  reconcile_dep_links.py
