[project]
name = "sfp-workspace"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
description = "Software Factory Platform - deterministic software production system"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.uv.workspace]
members = [
    "services/*",
    "packages/*",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
