[project]
name = "identity"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["src/identity"]
omit = ['*/migrations/env.py']

[tool.coverage.report]
fail_under = 90
