[project]
name = "workspace-worker"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx",
    "tenacity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["src/workspace_worker"]

[tool.coverage.report]
fail_under = 90
